cleaning logic and api enpoints
